@@ -12,7 +12,6 @@ import static org.junit.jupiter.api.Assertions.*;
 
 public class InMemoryTaskManagerTest {
     TaskManager taskManager = Managers.getDefault();
-    HistoryManager historyManager = Managers.getDefaultHistory();
 
     @Test
     void testCreateTask() {
@@ -132,7 +131,6 @@ public class InMemoryTaskManagerTest {
         int epicId = taskManager.createEpic(epic);
         Subtask subtask = new Subtask("Subtask", "Testing epic assignment", TaskStatus.NEW, epicId);
         int subtaskId = taskManager.createSubtask(subtask);
-        Subtask createdSubtask = taskManager.getSubtaskById(subtaskId);
         Subtask invalidSubtask = new Subtask("Invalid", "Should not assign itself as epic",
                 TaskStatus.NEW, subtaskId);
         invalidSubtask.setId(subtaskId);
@@ -211,6 +209,7 @@ public class InMemoryTaskManagerTest {
         assertEquals("Changed description", taskInHistory.getDescription());
         assertEquals(TaskStatus.DONE, taskInHistory.getTaskStatus());
     }
+
     @Test
     void testUpdateTaskChangesValues() {
         Task task = new Task("Old Name", "Old Desc", TaskStatus.NEW);
@@ -225,7 +224,7 @@ public class InMemoryTaskManagerTest {
     }
 
     @Test
-    void shouldRemoveTaskFromHistoryWhenTaskIsDeleted(){
+    void shouldRemoveTaskFromHistoryWhenTaskIsDeleted() {
         Task task1 = new Task("Task 1", "Desc", TaskStatus.NEW);
         Task task2 = new Task("Task 2", "Desc", TaskStatus.NEW);
         taskManager.createTask(task1);
@@ -235,7 +234,7 @@ public class InMemoryTaskManagerTest {
         taskManager.deleteTaskById(task1.getId());
         List<Task> history = taskManager.getHistory();
         assertEquals(1, history.size());
-        assertEquals(task2, history.get(0));
+        assertEquals(task2, history.getFirst());
 
     }
 }
